# awbrn

./: .gitignore  .gitmodules  .oxfmtrc.json  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cargo/: config.toml
.config/: mise.toml
.github/workflows/: ci.yml
assets/: unit_animation.py
assets/data/: co_portraits.json  factions.json  ui_atlas.json  unit_atlas_manifest.json
assets/maps/: 155801.txt  162795.json  162795.txt
assets/textures/: .gitignore  generate-spritesheet.sh
crates/aw-core/: Cargo.toml
crates/aw-core/src/: terrain.rs
crates/awbrn-bevy/: Cargo.toml
crates/awbrn-bevy/src/: awbrn_plugin.rs  commands.rs  ecs.rs  grid.rs  json_plugin.rs  keyboard.rs  lib.rs  loading.rs  replay_plugin.rs  snapshot.rs  ui_atlas.rs
crates/awbrn-bevy/src/commands/: replay_turn.rs
crates/awbrn-bevy/src/core/: board_index.rs  map.rs  mod.rs  units.rs
crates/awbrn-bevy/src/features/: camera.rs  event_bus.rs  fog.rs  input.rs  mod.rs  navigation.rs  weather.rs
crates/awbrn-bevy/src/modes/play/: mod.rs
crates/awbrn-bevy/src/modes/replay/: bootstrap.rs  commands.rs  controls.rs  fog.rs  mod.rs  state.rs
crates/awbrn-bevy/src/render/: animation.rs  fog_overlay.rs  map.rs  mod.rs  units.rs
crates/awbrn-bevy/tests/: replay_semantic_snapshots.rs
crates/awbrn-bevy/tests/snapshots/: replay_semantic_snapshots__replay_semantic_snapshots_1362397.snap
crates/awbrn-client/: Cargo.toml
crates/awbrn-client/src/: awbrn_plugin.rs  json_plugin.rs  lib.rs  loading.rs  snapshot.rs
crates/awbrn-client/src/core/: coords.rs  grid.rs  mod.rs
crates/awbrn-client/src/features/: camera.rs  event_bus.rs  fog.rs  input.rs  mod.rs  player_display.rs  player_roster.rs  weather.rs
crates/awbrn-client/src/modes/: mod.rs
crates/awbrn-client/src/modes/play/: live_match.rs  mod.rs
crates/awbrn-client/src/modes/replay/: bootstrap.rs  commands.rs  controls.rs  fog.rs  mod.rs  navigation.rs  state.rs
crates/awbrn-client/src/projection/: mod.rs
crates/awbrn-client/src/render/: animation.rs  fog_overlay.rs  map.rs  mod.rs  units.rs
crates/awbrn-client/tests/: replay_semantic_snapshots.rs
crates/awbrn-client/tests/snapshots/: replay_semantic_snapshots__replay_semantic_snapshots_1362397.snap
crates/awbrn-content/: Cargo.toml
crates/awbrn-content/src/: co_portraits.rs  lib.rs  spritesheet_index.rs  terrain_animations.rs  unit_animations.rs
crates/awbrn-core/: Cargo.toml
crates/awbrn-core/src/: awbw.rs  awbw_terrain.rs  factions.rs  lib.rs  movement.rs  spritesheet_index.rs  terrain.rs  terrain_animations.rs  unit_animation_data.rs  unit_animations.rs  units.rs  weather.rs
crates/awbrn-core/tests/: factions.rs  spritesheet_index_tests.rs
crates/awbrn-core/tests/snapshots/: spritesheet_index_tests__sprite_indices.snap  spritesheet_index_tests__unit_sprite_indices.snap
crates/awbrn-desktop/: Cargo.toml
crates/awbrn-desktop/src/: desktop_plugin.rs  grid.rs  main.rs  web_asset_plugin.rs
crates/awbrn-game/: Cargo.toml
crates/awbrn-game/src/: lib.rs  snapshot.rs
crates/awbrn-game/src/replay/: bootstrap.rs  commands.rs  fog.rs  mod.rs  state.rs
crates/awbrn-game/src/world/: board_index.rs  capture.rs  fog.rs  id_index.rs  map.rs  mod.rs  units.rs  weather.rs
crates/awbrn-map/: Cargo.toml
crates/awbrn-map/bench/: Cargo.toml
crates/awbrn-map/bench/src/: bench.rs
crates/awbrn-map/examples/: print-map.rs
crates/awbrn-map/src/: awbrn_map.rs  awbw_map.rs  lib.rs  map_error.rs  pathfinding.rs  position.rs
crates/awbrn-map/tests/: json-txt.rs  snapshots.rs
crates/awbrn-map/tests/snapshots/: snapshots__map_refinement@155801.txt.snap  snapshots__map_refinement@162795.txt.snap  snapshots__map_snapshots@155801.txt.snap  snapshots__map_snapshots@162795.txt.snap
crates/awbrn-server/: Cargo.toml
crates/awbrn-server/src/: adjacency.rs  apply.rs  command.rs  damage.rs  error.rs  lib.rs  player.rs  replay.rs  server.rs  setup.rs  state.rs  unit_id.rs  validate.rs  view.rs  wasm.rs
crates/awbrn-server/tests/: server.rs
crates/awbrn-types/: Cargo.toml
crates/awbrn-types/src/: awbw.rs  (+8 more)
crates/awbrn-wasm/: Cargo.toml
crates/awbrn-wasm/src/: keyboard.rs  lib.rs  offscreen_window_handle.rs  web_key_code_generated.rs
crates/awbw-replay/: Cargo.toml
crates/awbw-replay/examples/: print.rs
crates/awbw-replay/src/: de.rs  errors.rs  game_models.rs  lib.rs  parser.rs  replay.rs  turn_models.rs
crates/awbw-replay/tests/: snapshots.rs
crates/awbw-replay/tests/snapshots/: snapshots__replay_snapshots.snap  snapshots__replay_snapshots@1362397.zip.snap  snapshots__replay_snapshots@1391406.zip.snap  snapshots__replay_snapshots@1403019.zip.snap  snapshots__replay_snapshots@1419680.zip.snap  snapshots__replay_snapshots@1468032_landfall_2025-12-22.zip.snap  snapshots__replay_snapshots@1563018.zip.snap  snapshots__replay_snapshots@replay_1578186_d-day_2026-01-14.zip.snap
crates/bench/: Cargo.toml
crates/bench/src/: benchmarks.rs  criterion_main.rs  gungraun_main.rs
crates/bench/src/benchmarks/: map.rs  replay.rs
crates/xtask-assets/: Cargo.toml
crates/xtask-assets/src/: main.rs
crates/xtask-spritesheet-list/: Cargo.toml
scripts/: generate-web-key-codes.ts  setup-dev.ts  tsconfig.json
web/: .dev.vars.example  .env.tauri  .gitignore  drizzle-do.config.ts  drizzle.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  worker-configuration.d.ts  wrangler.jsonc
web/drizzle/: 0000_tiny_multiple_man.sql
web/src/: App.css  App.tsx  Layout.css  Layout.tsx  asset_manifest.ts  awbw_usernames.ts  co_portraits.ts  design-system.css  faction_visuals.ts  factions.ts  game_events.ts  game_runner.ts  index.css  matches.functions.ts  matches.server.ts  middleware.ts  roster_icons.ts  routeTree.gen.ts  router.tsx  schemas.ts  server.ts  start.ts  store.ts  vite-env.d.ts  worker_module.ts  worker_types.ts
web/src-tauri/: Cargo.toml  tauri.conf.json
web/src-tauri/icons/: icon.icns
web/src-tauri/src/: commands.rs  desktop_plugin.rs  lib.rs  main.rs  web_asset_plugin.rs
(+140 files in other folders)
