[workspace]
resolver = "3"
members = [ "crates/*" ]

[workspace.dependencies]
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
highway = "1.3.0"
indexmap = { version = "2.9.0", features = ["serde"] }
insta = { version = "1.42.2", features = ["glob", "serde", "json"] }
phpserz = "0.1"
rawzip = "0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
