[workspace]
resolver = "3"
members = [ "crates/*" ]

[workspace.dependencies]
approx = "0.5.1"
bevy = { version = "0.16.1", default-features = false }
flate2 = { version = "1.1.1", default-features = false, features = ["zlib-rs"] }
highway = "1.3.0"
indexmap = { version = "2.9.0", features = ["serde"] }
insta = { version = "1.42.2", features = ["glob", "serde", "json"] }
phpserz = "0.2.1"
raw-window-handle = { version = "0.6.2", features = ["wasm-bindgen-0-2"] }
rawzip = "0.2"
ehttp = { version = "0.5.0", default-features = false, features = ["native-async"] }
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_path_to_error = "0.1.15"
serde-wasm-bindgen = "0.6.5"
tsify = { version =  "0.5.5", default-features = false, features = ["js"] }
walkdir = "2.5"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["OffscreenCanvas"] }

# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
