[workspace]
resolver = "3"
members = [ "crates/*" ]

[workspace.dependencies]
anyhow = "1.0.100"
approx = "0.5.1"
bevy = { version = "0.18.0", default-features = false }
bevy-inspector-egui = { version = "0.36", default-features = false, features = ["bevy_render"] }
criterion = { version = "0.8", default-features = false }
ehttp = { version = "0.6.0", default-features = false, features = ["native-async"] }
flate2 = { version = "1.1.5", default-features = false, features = ["zlib-rs"] }
gungraun = "0.17.2"
highway = "1.3.0"
image = "0.25.9"
indexmap = { version = "2.9.0", features = ["serde"] }
insta = { version = "1.42.2", features = ["glob", "serde", "json"] }
js-sys = "0.3.83"
oxipng = "10.0.0"
phpserz = "0.2.2"
raw-window-handle = { version = "0.6.2", features = ["wasm-bindgen-0-2"] }
rawzip = "0.4.3"
rectangle-pack = "0.4.2"
rstest = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_path_to_error = "0.1.15"
serde-wasm-bindgen = "0.6.5"
strum = { version = "0.27.1", features = ["derive"] }
tsify = { version =  "0.5.6", default-features = false, features = ["js"] }
walkdir = "2.5"
wasm-bindgen = "0.2.106"
web-sys = { version = "0.3.83", features = ["OffscreenCanvas"] }

# https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Optimize for build time in CI.
[profile.ci]
inherits = "dev"
opt-level = 0
debug = "line-tables-only"
codegen-units = 4

[profile.ci.package."*"]
opt-level = 0
