[package]
name = "awbrn-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
awbrn-core = { path = "../awbrn-core" }
awbrn-map = { path = "../awbrn-map" }
awbw-replay = { path = "../awbw-replay" }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_log",
    "bevy_sprite",
    "bevy_state",
    "bevy_window",
]}
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
approx.workspace = true
