[package]
name = "awbrn-bevy"
version = "0.1.0"
edition = "2024"

[dependencies]
awbrn-core = { path = "../awbrn-core" }
awbrn-map = { path = "../awbrn-map" }
awbw-replay = { path = "../awbw-replay" }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_log",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_window",
]}
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
tsify.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
approx.workspace = true
