[package]
name = "awbrn-client"
version = "0.1.0"
edition = "2024"

[dependencies]
awbrn-content = { path = "../awbrn-content", features = ["bevy"] }
awbrn-game = { path = "../awbrn-game" }
awbrn-map = { path = "../awbrn-map", features = ["bevy"] }
awbrn-types = { path = "../awbrn-types", features = ["bevy"] }
awbw-replay = { path = "../awbw-replay" }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_log",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_window",
]}
indexmap.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[target.'cfg(target_family = "wasm")'.dependencies]
tsify.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
approx.workspace = true
highway.workspace = true
insta.workspace = true
