[package]
name = "awbrn-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
bevy = ["awbrn-types/bevy"]

[dependencies]
awbrn-types = { path = "../awbrn-types" }
serde.workspace = true
strum.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
serde_json.workspace = true
