[package]
name = "awbrn-desktop"
version = "0.1.0"
edition = "2024"

[features]
default = ["bevy/dynamic_linking"]

[dependencies]
awbrn-bevy = { path = "../awbrn-bevy" }
awbrn-core = { path = "../awbrn-core" }
awbrn-map = { path = "../awbrn-map" }
awbw-replay = { path = "../awbw-replay" }
bevy = { workspace = true, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_log",
    "bevy_render",
    "bevy_sprite_picking_backend",
    "bevy_sprite",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "png",
    "std",
    "x11",
]}
ehttp.workspace = true

[dev-dependencies]

[package.metadata.awbrn-desktop.release]
default-features = false
