[package]
name = "awbrn-map"
version = "0.1.0"
edition = "2024"

[features]
bevy = ["dep:bevy"]

[dependencies]
awbrn-core.path = "../awbrn-core"
bevy = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
insta.workspace = true
rstest.workspace = true
