[package]
name = "awbw-replay"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2.workspace = true
indexmap.workspace = true
phpserz.workspace = true
rawzip.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
highway.workspace = true
insta.workspace = true
