[package]
name = "bench"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
bench = false

[dependencies]
awbrn-core = { path = "../awbrn-core" }
awbrn-map = { path = "../awbrn-map" }
awbw-replay = { path = "../awbw-replay" }
criterion = { workspace = true }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
gungraun = { workspace = true }
criterion = { workspace = true, default-features = true }

[[bench]]
name = "awbrn-bench-criterion"
harness = false
path = "src/criterion_main.rs"

[[bench]]
name = "awbrn-bench-gungraun"
harness = false
path = "src/gungraun_main.rs"
