[package]
name = "xtask-assets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
awbrn-types = { path = "../awbrn-types" }
image.workspace = true
indexmap.workspace = true
oxipng.workspace = true
rectangle-pack.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
walkdir.workspace = true
