[package]
publish = false
name = "awbrn-map-bench"
version = "0.0.1"
authors = ["Nick Babcock <nbabcock19@hotmail.com>"]
license = "MIT"
edition = "2021"

[workspace]

[lib]
bench = false

[[bench]]
name = "awbrn-map-bench"
harness = false
path = "src/bench.rs"

[dependencies]
criterion = "0.5.1"
awbrn-map = { path = ".." }
awbrn-core = { path = "../../awbrn-core" }

[profile.release]
debug = true

[profile.bench]
debug = true
